[package]
name = "vdf_field"
version = "0.1.0"
authors = ["Stegos AG <info@stegos.com>"]
categories = ["cryptography"]
description = "Stegos - Auxiliary Extensions for Crypto Library"

[dependencies.blake2b_simd]
version = "0.4.1"

[dependencies.byteorder]
version = "1"

[dependencies.ff]
version = "0.4"
features = ["derive"]

[dependencies.rand]
version = "0.4"

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dev-dependencies.serde_json]
version = "1.0"
